force-app/main/default/objects/LLC_BI__Excluded_Exposure__c/LLC_BI__Excluded_Exposure__c.object-meta.xml
<CustomObject>
    <description>This object captures whether a loan or debt has been excluded from exposure calculations for a relationship or product package. It uses field history tracking to track a loan&apos;s history of being excluded and re-included into exposure calculations.</description>
    <label>Excluded Exposure</label>
    <nameField>
        <label>Excluded Exposure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Excluded Exposure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>