force-app/main/default/objects/LLC_BI__Excluded_Exposure__c/fields/LLC_BI__Exclude_Reason__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Exclude_Reason__c</fullName>
    <description>This optional field may be set to required via a field set. Users select this field to specify reportable exclusions for a loan or debt; default is null.</description>
    <label>Exclude Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Term-Out Refinance</fullName>
            </value>
            <value>
                <fullName>Debt Consolidation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>