force-app/main/default/objects/LLC_BI__Excluded_Exposure__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This optional field auto-populates via the system. It specifies which loan to exclude in the exposure calculation.</description>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Excluded Exposure</relationshipLabel>
    <relationshipName>Excluded_Exposures</relationshipName>
    <type>Lookup</type>
</CustomField>